# client

./: OWNCLOUD.cmake  VERSION.cmake  VaultDropBuildNotes.md
admin/win/docker/: build.sh  yxj_build.sh  yxj_mkdockerimage.sh  yxj_run.sh
client-build/: YXJ_CMAKE.sh
cmake/modules/: NSIS.template.in
shell_integration/windows/OCContextMenu/: OCContextMenu.vcxproj  OCContextMenu.vcxproj.filters
shell_integration/windows/OCOverlays/: OCOverlays.vcxproj
shell_integration/windows/OCUtil/: OCUtil.vcxproj
src/: CMakeLists.txt
src/cmd/: cmd.cpp
src/csync/: csync.cpp  csync.h  csync_exclude.h  csync_reconcile.cpp  csync_update.cpp
src/gui/: accountsettings.cpp  activitylistmodel.cpp
src/gui/creds/: oauth.cpp
src/gui/updater/: updater.cpp
src/gui/wizard/: owncloudadvancedsetuppage.cpp  owncloudadvancedsetuppage.ui
src/libsync/: account.cpp  connectionvalidator.cpp  discoveryphase.cpp  networkjobs.cpp  owncloudpropagator.cpp  owncloudtheme.cpp  propagatedownload.cpp  propagateremotemove.cpp  propagateupload.h  propagatorjobs.cpp  syncengine.cpp  syncoptions.h  theme.cpp
src/libsync/creds/: httpcredentials.cpp  httpcredentials.h
src/sendto/: CMakeLists.txt  main.cpp  sendtomainwindow.cpp  sendtomainwindow.h  sendtomainwindow.ui
test/: testsyncplaceholders.cpp
translations/: client_ca.ts
yxj_autoupdate_versions/: download.html  download.html.in  macos-sparkle.xml.in  macos.json  macos.xml  macos.xml.in  win32.json  win32.xml  win32.xml.in
yxj_docs/: VaultDropClientDocs.html
yxj_vaultdrop_certificate/: VaultDropCodeSigningKey.pfx  user.crt
